--- a/applied_genomics/hw/hw3/RNAseqHomeworkQues.Rmd
+++ b/applied_genomics/hw/hw3/RNAseqHomeworkQues.Rmd
@@ -52,6 +52,7 @@ for (line in colnames)
   }
 }
 expgroup = data.frame(condition_vec,row.names = colnames)
+head(expgroup) 
 ```
 
 ### Step 3 (5pts)
